# ft_printf

./: .gitignore  CMakeLists.txt  Makefile  debug_print_pf.c  main.c  pf.sh
includes/: ft_printf.h
libft/: Makefile  ft_atoi.c  ft_d_bblsort.c  ft_d_minind.c  ft_isalnum.c  ft_itoa.c  ft_lstadd.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memmove.c  ft_memset.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_strcat.c  ft_strclr.c  ft_strdel.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strlen.c  ft_strmap.c  ft_strmapi.c  ft_strncpy.c  ft_strnew.c  ft_strstr.c  ft_strsub.c  ft_strtoupp.c  ft_strtrim.c  ft_tolower.c  libft.h
src/: ft_printf.c
src/handle/: char.c  handle.c  integer.c  invalid_specifier.c  number.c  pointer.c  string.c  wchar.c  wstring.c
src/handle/integer/: decimal.c  hexademical.c  integer.c  octal.c  tmp.c
src/helpers/: buffer.c  push_chars.c
src/libft/: ft_atoi.c  ft_bzero.c  ft_d_sqrt.c  ft_errmsg.c  ft_gnl.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_lf_pow.c  ft_ll_fact.c  ft_lstdel.c  ft_lstnew.c  ft_memalloc.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_putchar.c  ft_putchar_fd.c  ft_putnbr.c  ft_putnstr.c  ft_putstr.c  ft_putstr_fd.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strncat.c  ft_strncmp.c  ft_strnequ.c  ft_strnstr.c  ft_strpbrk.c  ft_strrchr.c  ft_strsplit.c  ft_strtolow.c  ft_toupper.c  libft.h
src/parse/: flags.c  length.c  parse.c  precision.c  width.c
